--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title>Week 9</title>
+    <title>Aida</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -35,8 +35,8 @@
         <h2 class="masthead-brand ml-4" >Portfolio.</h2>
         <nav class="nav nav-masthead justify-content-center">
             <h3><a class="nav-link active" href="index.html">about</a></h3>
-            <h3><a class="nav-link" href="#">works</a></h3>
-            <h3><a class="nav-link" href="#">resume</a></h3>
+            <h3><a class="nav-link" href="http://aidtar1.dreamhosters.com/week_10_work/">works</a></h3>
+            <h3><a class="nav-link" href="http://aidtar1.dreamhosters.com/week_10_resume/">resume</a></h3>
             <h3><a class="nav-link" href="#">contact</a></h3>
         </nav>
       </div>
