--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <div class="row justify-content-end">
   <div class="col-md-3">
-      <main role="main" class="cover inner text-left">
+      <main class="cover inner text-left">
         <h1 class="cover-heading hidden-xs">Aida<br>Tarrah</h1>
         <p class="about">
           I enjoy to challenge myself! I always like to
@@ -69,10 +69,6 @@
           <p>portfolio, by me</p>
         </div>
       </footer>
-</div>
-
-  </div>
-
 </div>
 
   </body>
