--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts.js" defer></script>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/cover/">
 
