--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
     <header class="masthead mb-auto">
       <div class="inner">
-        <h2 class="masthead-brand ml-4" >Portfolio.</h2>
-        <nav class="nav nav-masthead justify-content-center">
+        <h2 class="masthead-brand ml-4">Portfolio.</h2>
+        <nav class="nav nav-masthead justify-content-center mx-auto">
             <h3><a class="nav-link active" href="index.html">about</a></h3>
             <h3><a class="nav-link" href="http://aidtar1.dreamhosters.com/week_10_work/">works</a></h3>
             <h3><a class="nav-link" href="http://aidtar1.dreamhosters.com/week_10_resume/">resume</a></h3>
@@ -44,7 +44,7 @@
 
 <div class="row justify-content-end">
   <div class="col-md-3">
-      <main class="cover inner text-left">
+      <main class="cover inner text-left mx-auto">
         <h1 class="cover-heading hidden-xs">Aida<br>Tarrah</h1>
         <p class="about">
           I enjoy to challenge myself! I always like to
