--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
   <body class="text-center">
 
     <div id="overlay"></div>
-    <div id="yellowOverlay"></div>
+
+    <div id="yellowOverlay">
+    </div>
 
       <div class="cover-container mr-auto justify-content-start d-flex w-100 h-100 p-4 flex-column">
 
